# japan-ifc-building-confirmation

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  deploy.mk  deploy.sh  docker-compose.yaml  main.py  prod-test.sh  pyproject.toml
api/: Dockerfile  Dockerfile.deploy  Makefile  main.py  pyproject.toml
api/operations/: file_operation.py  object_operation.py
api/schemas/: api_request.py  api_response.py
api/tests/: config.py  test_main.py
api/tests/data/: test_base64.txt
app/: Dockerfile  Makefile  health.py  main.py  pyproject.toml
app/jpnifcbc/law/standard_methods/: law21_1.py  law2_5.py
app/jpnifcbc/law/sub_methods/: law109_4.py  law109_5.py
app/jpnifcbc/wrapper/: element.py
data/: post_data.json
jpnifcbc/: Dockerfile  Makefile  pyproject.toml
jpnifcbc/law/: base_confirmation.py
jpnifcbc/law/standard_methods/: law21_1.py  law2_5.py
jpnifcbc/law/sub_methods/: law109_4.py  law109_5.py
jpnifcbc/models/: building.py
swagger/: swagger.yaml
swagger/schema/: index.json  index.yaml
