[tool.poetry]
name = "japan-ifc-building-confirmation-api"
version = "0.1.0"
description = ""
authors = ["ktaroabobon <ktaroabobon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
ifcopenshell-python = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
